# Personal_NameVerification

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODEX_FIRST_RUN_PROMPT_READY.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  nameverification.db  pyproject.toml
.github/workflows/: p1-ui-audit-batch.yml  p1-ui-audit-fix.yml  quality-gates.yml  release-dry-run.yml  trend-research-auto.yml  windows-exe.yml  windows-validation.yml
app/: __init__.py  pyside6_main.py
app/application/: __init__.py  authorization.py  auto_log_export.py  backup_restore_services.py  core_services.py  duplicate_display_name_preflight.py  enhanced_query_services.py  export_backup_services.py  import_services.py  password_services.py  public_id_queries.py  query_services.py  read_models.py  runtime_paths.py  user_audit_services.py  user_services.py  windows_identity.py
app/domain/: __init__.py  errors.py  normalization.py  public_id.py
app/infrastructure/: __init__.py  db.py  export_backup.py  import_data.py  restore_backup.py
app/ui/: __init__.py  _hotfix_audit.py  _hotfix_operations_busy.py  _hotfix_operations_log_viewer.py  _hotfix_operator_style.py  _hotfix_selection.py  _probe_rich_ui.py  _release_qa_fixes.py  audit_log_tab.py  audit_logs_tab.py  context_helpers.py  crud_list_first.py  datetime_display.py  dialogs.py  help_settings_tab.py  initial_admin_setup_dialog.py  input_defaults.py  link_management_tab.py  login_dialog.py  main_window.py  name_management_tab.py  navigation_guide.py  navigation_polish.py  operations_guidance.py  operations_guidance_widgets.py  operations_guided_tab.py  operations_log.py  operations_tab.py  operations_tab_navigation.py  operations_test_fixes.py  operations_workers.py  permissions.py  public_id_display.py  rbac_ui_guards.py  relation_types.py  restore_current_db_guard.py  rich_search_tab.py  role_context.py  role_visual_identity.py  sanitized_export_ui.py  (+16 more)
app/ui/old/: __init__.py  name_management_tab.py  name_management_tab_absorbed.py  title_subtitle_management_tab.py
db/: schema.sql
db/migrations/: 0001_initial_schema.sql  0002_name_title_links.sql  0003_public_ids.sql
docs/: 00_blocker_missing_source_docs.md  00_repository_master_spec.md  01_role_responsibility_matrix.md  02_document_priority_order.md  03_glossary.md  04_non_goals.md  100_list_column_reduction_spec_20260604.md  100_uat_script_chain_20260602.md  101_uat_image_review_checklist_20260604.md  101_unique_display_name_policy_20260604.md  10_requirements_definition.md  11_acceptance_criteria.md  12_basic_design.md  13_detailed_technical_design.md  14_ui_ux_design.md  15_data_design.md  16_error_handling_policy.md  17_state_transition_rules.md  18_search_behavior_spec.md  19_permissions_rbac_spec.md  20_icon_file_handling_spec.md  22_ui_ux_redesign_plan.md  23_internal_identifier_migration_plan.md  24_ui_patch_absorption_plan.md  25_public_id_foundation.md  30_development_process_map.md  31_branch_and_pr_policy.md  32_coding_rules.md  33_directory_structure_policy.md  34_definition_of_done.md  35_definition_of_ready.md  36_refactor_and_deletion_policy.md  37_ai_handoff_protocol.md  38_commit_message_policy.md  39_dependency_policy.md  40_test_strategy.md  41_test_level_matrix.md  42_test_case_design_policy.md  43_review_checklist.md  44_final_review_checklist.md  (+74 more)
docs/chat/summaries/: 20260603_personal_nameverification_completion_summary.md  20260603_personal_nameverification_handoff_detail.md  20260603_personal_nameverification_handoff_prompt.md  (+3 more)
docs/manuals/: 00_user_manual_index.md  NameVerification_初回教育用_簡易マニュアル.docx  NameVerification_初回教育用_簡易マニュアル.md  NameVerification_運用手順書_詳細版.docx  NameVerification_運用手順書_詳細版.md  NameVerification_運用操作マニュアル_機能説明.md  NameVerification_運用操作マニュアル_機能説明.xlsx  README.md
docs/operations/: title-subtitle-display-name-cleanup-policy.md  title-subtitle-display-name-index-readiness.md
docs/release_ledger/: 00_release_ledger_index.md
docs/releases/: v0.1.0-rc1_20260511.md
docs/requirements/: Personal-AI-Operations-Platform_REQUIREMENTS_v1.0_20260603.md
docs/test_plans/: million_record_validation_plan_20260511.md
logs/: change_logs.jsonl
migrations/: 20260515_0001_auth_users_settings_audit.sql
packaging/: NameVerification.spec
prompts/: 00_codex_bootstrap_prompt.md  01_codex_work_rules.md  02_codex_pr_template.md  03_codex_task_split_examples.md  04_codex_no_assumption_rules.md
scripts/: build_exe_windows.ps1  common_windows.ps1  detect_duplicate_entities.py  generate_release_checklist_windows.ps1  generate_sample_data.py  package_release_windows.ps1  reset_uat_demo_windows.ps1  run_release_windows.ps1  smoke_test_exe_windows.ps1  smoke_test_portable_release_windows.ps1  smoke_test_portable_windows.ps1  wait_quality_gates.ps1
tests/: .gitignore  .p1-audit-repair-marker  conftest.py  test_account_switch_cleanup.py  test_audit_help_summary.py  test_audit_log_tab_ui.py  test_auto_log_export.py  test_backup_restore_services.py  test_change_log_queries.py  test_change_logs.py  test_core_services.py  test_crud_list_first.py  test_datetime_display.py  test_db_initialization.py  test_delete_user_ui_clarity.py  test_detect_duplicate_entities.py  test_display_name_expression_indexes.py  test_display_name_index_readiness_doc.py  test_duplicate_display_name_cleanup_policy_reference.py  test_duplicate_display_name_preflight.py  test_duplicate_service_validation_v2.py  test_editor_uat_followup_ui.py  test_export_backup_services.py  test_generate_sample_data_demo.py  test_help_settings_tab.py  test_import_services.py  test_invalid_io_evidence.py  test_link_management_tab_ui.py  test_main_window_smoke.py  test_name_management_tab_ui.py  test_name_native_list_first_layout.py  test_navigation_polish_ui.py  test_normalization_rules.py  test_operations_guidance.py  test_operations_guidance_widgets.py  test_operations_summary_polish.py  test_operations_tab_compact_layout_ui.py  test_operations_tab_navigation.py  test_operations_tab_ui.py  test_operations_threaded_io_services.py  (+39 more)
tmp/exe_smoke/: nameverification_smoke.db
