[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nameverification-v3"
version = "0.1.0"
description = "NameVerification v3 bootstrap package"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.6,<0.7",
  "black>=24.8,<25",
  "mypy>=1.11,<2",
  "pyinstaller>=6.10,<7",
]


[tool.setuptools.packages.find]
include = ["app", "app.*"]
exclude = ["tests", "docs", "prompts", "db", "assets", "scripts"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '''
^/(app/(application|domain|infrastructure)/.*\.py|app/__init__\.py)$
'''
force-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | build
  | dist
  | app/ui
  | app/pyside6_main\.py
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "venv",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "old",
  "app/ui/operations_test_fixes.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/ui/operations_tab.py" = ["B009", "E501", "UP038"]
"app/ui/title_subtitle_management_tab.py" = ["E501", "I001"]
"app/ui/search_tab.py" = ["E501"]
"app/ui/link_management_tab.py" = ["E501"]
"app/ui/audit_log_tab.py" = ["E501"]
"app/ui/ui_style.py" = ["E501"]
"app/ui/help_settings_tab.py" = ["E501"]
"app/ui/subtitle_management_tab.py" = ["E501", "I001"]
"tests/conftest.py" = ["B", "E501", "F", "I", "UP"]
"tests/test_auto_log_export.py" = ["E501"]
"scripts/generate_sample_data.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
exclude = '''(?x)(
    ^old[/\\]
    | ^app[/\\]ui[/\\]operations_test_fixes\.py$
    | ^tests[/\\]
)'''
warn_unused_configs = true


[[tool.mypy.overrides]]
module = ["PySide6", "PySide6.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.ui.*"]
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-overload",
    "index",
    "method-assign",
    "misc",
    "no-any-return",
]
